# pos-fastapi

./: .gitignore  README.md  build.sh  cert.pem  install_and_run_python_service.bat  install_and_run_service.bat  key.pem  launcher.py  main.py  pyproject.toml  requirements.txt  setup.py  stop_and_remove_service.bat
app/: main.py  schemas.py
